styles/style.css
/* -------------- GLOBALS -------------- */

body {
  font-family: Verdana, Geneva, Tahoma, sans-serif;

  padding: 0;
  margin: auto;
  background-color: #383842;
  min-height: 100vh;
  width: 65%;

  background: url("../images/background.jpg");
  background-repeat: no-repeat;
  background-position: top center;
  background-size: 2000px auto;
}

header {
  position: relative;
  background-color: rgb(0, 0, 0, 0.8);
  height: 50vh;
}

header img {
  color: white;
  position: absolute;
  max-height: 50%;
  max-width: 50%;
  margin: 0;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

nav {
  padding-top: 10px;
  padding-bottom: 10px;
  background-color: black;
  border-top: 2px solid #ffffff;
  border-bottom: 2px solid #ffffff;
  color: white;
  text-align: center;
}

nav ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

nav li {
  display: inline;
}

nav li a {
  text-decoration: none;
  color: white;
  padding: 10px 4%;
  text-align: center;
}
nav li a:hover {
  background-color: #5a5a5a;
  color: rgba(241, 227, 95, 0.89);
}

footer {
  padding: 30px;
  background-color: black;
}

footer p {
  color: #aaaaaa;
  font-style: italic;
  font-size: 15px;
  text-align: center;
}

/* -------------- MAIN CONTENT -------------- */

.content {
  color: rgb(180, 164, 164);
  font-size: 15px;
  position: relative;
  padding-top: 70px;
  padding-bottom: 50px;
  padding-left: 20%;
  padding-right: 20%;
  background-color: rgb(0, 0, 0, 0.8);
  text-align: center;
  backdrop-filter: blur(8px);
}

.main {
  margin-bottom: 30px;
}

.content h2 {
  margin-top: 0;
  margin-bottom: 20px;
  padding: 0;
  color: rgba(241, 227, 95, 0.89);
  font-size: 40px;
}

.content h3 {
  font-size: 22px;
  color: white;
  margin-top: 35px;
  margin-bottom: 0;
}

.content p {
  padding: 20px 0px;
  margin: 0;
}

.content .source {
  color:white;
  font-style: italic;
  font-size: 14px;
  margin: 50px 0px 0px 30px;
}

.content .source a {
  color: white;
}

.main__paragraph {
  overflow: hidden;
  margin: 0;
  padding: 0;
}

.main__paragraph ul {
  display: inline-block;
  text-align: left;
}

.film-image {
  display: inline-block;
  padding: 0;
  margin: 20px 0px 20px 30px;
  border-style: groove;
  border-width: 3px;
  border-color: white;
}

/* -------------- INDEX CONTENT -------------- */

.book-review {
 padding-bottom: 10px; 
}

.book-review q {
  padding: 20px 0px;
  font-style: italic;
  color: #dadada;
  display: block;
}

/* -------------- TRIVIA CONTENT -------------- */

.fun-fact-table {
  margin: 40px auto;
  padding: 0;
}

.fun-fact-table table {
  table-layout: fixed;
  word-break: break-all;
}

.fun-fact-table th {
  width: 50%;
  vertical-align: top;
}

.fun-fact-table__fact {
  padding: 10px 20px;
  text-align: center;
}

.fun-fact-table__fact h3 {
  color: white;
  font-size: 17px;
}

.fun-fact-table__fact p {
  color: rgb(202, 202, 202);
  font-size: 15px;
  font-weight: lighter;
  letter-spacing: 1px;
}

